# project-chimera-agentic-infrastructure

./: .coderabbit.yaml  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.agent/rules/: specs-first.md
.cursor/: mcp.json
.cursor/rules/: agent.mdc  specs-first.mdc
.github/workflows/: main.yml
.specify/memory/: constitution.md
research/: Project Chimera Challenge Report.md  architecture_strategy.md  reading_notes.md  tooling_strategy.md
scripts/: spec_check.py
skills/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
specs/001-chimera-core-specs/: spec.md
specs/001-chimera-core-specs/checklists/: requirements.md
tests/: test_skills_interface.py  test_trend_fetcher.py
