[project]
name = "project-chimera-agentic-infrastructure"
version = "0.1.0"
description = "robust "Factory" for the creation and governance of Autonomous AI Influencers."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # Core dependencies
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    
    # MCP Sense dependencies
    "mcp>=0.1.0",  # If available from PyPI
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Async/Concurrency
    "asyncio>=3.4.3",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "ipython>=8.17.0",
    "jupyter>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.5.0",
]