[project]
name = "project-chimera-agentic-infrastructure"
version = "0.1.0"
description = 'robust "Factory" for the creation and governance of Autonomous AI Influencers.'
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "mcp>=0.1.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
]